--- a/wireguard-over-vless/peer1-wireguard-config.conf
+++ b/wireguard-over-vless/peer1-wireguard-config.conf
@@ -1,14 +1,8 @@
 [Interface]
 Address = 192.168.123.2/24
-PostUp   = iptables -I FORWARD -i %i -j ACCEPT
-PostUp   = iptables -I FORWARD -o %i -j ACCEPT
-#PostUp   = iptables -t nat -I POSTROUTING -o eth0 -j MASQUERADE
-PostDown = iptables -D FORWARD -i %i -j ACCEPT
-PostDown = iptables -D FORWARD -o %i -j ACCEPT
-#PostDown = iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 PrivateKey = GFe4veYaUm9i3c9Fd9pTd/cO3EC4O/GZnf5JL7GD8Hc=
 
-# 配置peer2
+# configure peer vps
 [Peer]
 PublicKey = 1yrnzlpVNhpQyyBj0oehVqCaL/06RjK/tcd3icMuZ0Q=
 AllowedIPs = 192.168.123.0/24
